ascent_macro_tests/tests/macros/pass/empty_ascent.rs
//! Empty program

use ascent::ascent;

ascent! {}

fn main() {}
