ascent_macro_tests/tests/macros/fail/non_existent_macro.rs
//! Use of non-existent macro

use ascent::ascent;

ascent! {
    // Invalid: this rule references a non-existent macro:
    non_existent_macro!();
}

fn main() {}
